# CogniPlan

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py  test_node_imports.py
.qoder/: settings.json
.qoder/specs/cogniplan-planner-node/: design.md  tasks.md
.qoder/specs/ros-deployment/: design.md  tasks.md
config/: cogniplan_planner.yaml
launch/: cogniplan_planner.launch
msg/: CogniPlanStatus.msg
planner/: __init__.py  cogniplan_planner_node.py  cogniplan_planner_node.py.backup  joint_trainer.py  model.py
srv/: SetGoal.srv
test/: README.md  TEST_PLAN.md  TEST_SUMMARY.md  generate_test_data.py  run_tests.py  test_cogniplan.launch  test_data_publisher.py
test/data/: test_config.yaml  test_map.npy  test_odom.json  test_scan.json
test/integration/: test_node_communication.py
test/performance/: test_performance.py
test/system/: test_navigation.py
test/unit/: test_components.py  test_joint_trainer.py
